--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "rust-analyzer.linkedProjects": [
-    "./day-1-1/Cargo.toml",
-    "./day-1-2/Cargo.toml",
+    "./day-1/day-1-1/Cargo.toml",
+    "./day-1/day-1-2/Cargo.toml",
     "./day-2/Cargo.toml",
   ]
 }
