--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "rust-analyzer.linkedProjects": [
     "./day-1/day-1-1/Cargo.toml",
     "./day-1/day-1-2/Cargo.toml",
-    "./day-2/Cargo.toml",
+    "./day-2/part-1/Cargo.toml",
+    "./day-2/part-2/Cargo.toml",
+    "./day-2/part-1/Cargo.toml"
   ]
 }
