--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "./day-2/part-2/Cargo.toml",
     "./day-3/part-1/Cargo.toml",
     "./day-4/part-1/Cargo.toml",
-    "./day-4/part-2/Cargo.toml"
+    "./day-4/part-2/Cargo.toml",
+    "./day-5/part-1/Cargo.toml"
   ]
 }
