--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "./day-3/part-1/Cargo.toml",
     "./day-4/part-1/Cargo.toml",
     "./day-4/part-2/Cargo.toml",
-    "./day-5/part-1/Cargo.toml"
+    "./day-5/part-1/Cargo.toml",
+    "./day-5/part-2/Cargo.toml"
   ]
 }
